syntax = "proto3";

package club.haochezhu.ubm.pb;
option java_outer_classname = "Ubm";

message SensorData {
  Os os = 1;
  Gnss gnss = 2;
  Imu imu = 3;
  MotionActivity motions = 4;
  Proximity proximity = 5;
  // iOS only
  DeviceOrientation orientation = 6;
  CallState state = 7;
  CollectType type = 8;
  AmbientLight light = 9;
}

message AmbientLight {
  double timestamp = 1;
  double illuminance = 2;
}

// 0 -> 1 -> 0 {呼入电话(未接通 )}
// 0 -> 1 -> 2 -> 0 {呼入电话(已接通)}
// 0 -> 2 -> 0 {呼出电话(没法区分是否接通)}
enum CallState {
  // 空闲状态
  Idle = 0;
  // 打入电话的响铃状态，呼出时不会出现
  Ring = 1;
  // 接通状态 或者是 呼出状态
  Offhook = 2;
}

enum CollectType {
  Manual = 0;
  Auto = 1;
}

message Gnss {
  double timestamp = 1;
  double latitude = 2;
  double longitude = 3;
  double altitude = 4;
  double speed = 5;
  double bearing = 6;
  double horizontal_accuracy = 7;
  double vertical_accuracy = 8;
  double speed_accuracy = 9;
  double bearing_accuracy = 10;
  CoordinateSystem coordinate_system = 11;
}

enum CoordinateSystem {
  WGS84 = 0;
  GCJ02 = 1;
}

message Imu {
  double timestamp = 1;
  // TYPE_GRAVITY
  // https://developer.apple.com/documentation/coremotion/cmdevicemotion/1616164-gravity
  AxisData gravity = 2;
  // TYPE_LINEAR_ACCELERATION
  // https://developer.apple.com/documentation/coremotion/cmdevicemotion/1616149-useracceleration
  AxisData net_accel = 3;
  // TYPE_ACCELEROMETER_UNCALIBRATED
  // https://developer.apple.com/documentation/coremotion/getting_raw_accelerometer_events
  AxisData raw_accel = 4;
  // TYPE_GYROSCOPE_UNCALIBRATED
  // https://developer.apple.com/documentation/coremotion/getting_raw_gyroscope_events
  AxisData gyro = 5;
  // TYPE_MAGNETIC_FIELD_UNCALIBRATED
  // https://developer.apple.com/documentation/coremotion/cmmagnetometerdata
  AxisData magneto = 6;
  Quaternion quaternion = 7;
  AxisData raw_accel_bias = 8;
  AxisData gyro_bias = 9;
  AxisData magneto_bias = 10;
}

message AxisData {
  double x = 1;
  double y = 2;
  double z = 3;
}

message Quaternion {
  double w = 1;
  double x = 2;
  double y = 3;
  double z = 4;
}

message MotionActivity {
  double timestamp = 1;
  repeated Motion event = 2;
}

message Motion {
  MotionType type = 1;
  MotionConfidence confidence = 2;
  double start_ts = 3;
}

enum MotionType {
  mt_defaults = 0;
  stationary = 1;
  walking = 2;
  running = 3;
  automotive = 4;
  cycling = 5;
  unknown = 6;
  mt_unknown = 7;
}

enum MotionConfidence {
  cf_defaults = 0;
  low = 1;
  medium = 2;
  high = 3;
  cf_unknown = 4;
}

enum Os {
  Android = 0;
  iOS = 1;
}

message Proximity {
  double timestamp = 1;
  // iOS
  int32 proximityState = 2;
  // android
  double proximity = 3;
}

message DeviceOrientation {
  double timestamp = 1;
  DeviceOrientationType type = 2;
}

enum DeviceOrientationType {
  dot_defaults = 0;
  // 正立
  portrait = 1;
  // 倒立
  portrait_upsidedown = 2;
  // 横向头朝左
  landscape_left = 3;
  // 横向头朝右
  landscape_right = 4;
  // 脸朝上
  faceup = 5;
  // 脸朝下
  facedown = 6;
  // 系统自带的unknown
  dotunknown = 7;
  // 系统返回不是1~7里的任何一种
  dot_unknown = 8;
}
